# KiroStats

./: .gitignore  README.md  install.ps1  pyproject.toml
.kiro/hooks/: kiro-stats-session.kiro.hook
.kiro/steering/: credits.md  start.md  stats.md
src/kiro_stats_mcp/: __init__.py  server.py
src/kiro_usage_mcp/: __init__.py  server.py
