[project]
name = "kiro-usage-mcp"
version = "0.1.0"
description = "Local MCP server that exposes Kiro IDE credit usage to agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
kiro-usage-mcp = "kiro_usage_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
